// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MultimediaPlayer /> for images matches snapshot 1`] = `
<div>
  <h1>
    test
  </h1>
  <div
    className="container-resource"
  >
    <img
      alt="test"
      src="www.download.com"
    />
  </div>
</div>
`;

exports[`<MultimediaPlayer /> for videos matches snapshot 1`] = `
<div>
  <h1>
    test
  </h1>
  <div
    className="container-resource"
  >
    <video
      controls={true}
      poster="www.preview.com"
      preload="none"
      src="www.download.com"
    />
  </div>
</div>
`;
